resources/testcases_static_checks/tests/positive/isDatalog/cross-product.rls
../../../tests_common_data/rule-classification-examples/cross-product.rls