resources/testcases_static_checks/tests/negative/isRpc/useOfUniqueConstantsOrCriticalRuleConstantsInUnblockabilityInstancePreventsDetectionOfCyclicityForRestrictedChase.rls
../../../tests_common_data/critical-examples/useOfUniqueConstantsOrCriticalRuleConstantsInUnblockabilityInstancePreventsDetectionOfCyclicityForRestrictedChase.rls